--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,9 @@ ul{
     justify-content: space-between;
     margin:25px 33px;
 }
+li{
+    cursor: pointer;
+}
 .site{
     width:149px;
     height: 125px;
@@ -70,6 +73,7 @@ ul{
     flex-direction: column;
     border-radius: 5px;
     margin-bottom:16px;
+    position: relative;
 }
 .site > .logo{
     width:61px;
@@ -126,6 +130,8 @@ ul{
     bottom: 9%;
     position: fixed;
 }
-/* .decoration{
-    
-} */
+.siteList .site > .close{
+    position: absolute;
+    right:7px;
+    top:4px;
+}
