--- a/src/style.css
+++ b/src/style.css
@@ -28,18 +28,19 @@ img{max-width: 100%;max-height: 100%;}
     font-style: normal;
 }
 .globalHeader{
-    margin-top:57px;
-    margin-left:33px;
-    margin-right:33px;
+    margin-left:9%;
+    margin-right:9%;
 }
 @media (min-width:500px){
     .globalHeader{
-        margin-bottom: 40px;
+        margin-top:100px;
+        margin-bottom: 60px;
     }
 }
 @media (max-width:500px){
     .globalHeader{
         margin-bottom: 30px;
+        margin-top:57px;
     }
 }
 .searchForm{
@@ -55,22 +56,20 @@ img{max-width: 100%;max-height: 100%;}
 }
 @media (max-width:500px){
     .searchForm{
-        min-width: 309px;
         margin-left: auto;
         margin-right: auto;
     }
 }
-.ulContainer{
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
+@media (min-width:500px){
+    .ulContainer{
+        display: flex;
+        justify-content: center;
+    }
 }
 @media (max-width:500px){
     .ulContainer{
-        border:1px solid black;
-        width: 348px;
-        margin-left: 20px;
-        margin-right: 20px;
+        margin-left:9%;
+        margin-right: 9%;
     }
 }
 .searchForm > input{
@@ -91,29 +90,30 @@ img{max-width: 100%;max-height: 100%;}
     font-size: 16px;
     font-family:'pingFangSC-Bold';
 }
+.searchForm >button:hover{
+    cursor: pointer;
+}
 .siteList{
     display: flex;
     flex-wrap: wrap;
+    /*margin-bottom:16px; */
 }
 @media (min-width:500px){
     .siteList{
-        margin-left:48px;
-        margin-right: -36px;
+        max-width: 1463px;
+        margin-right: -60px;
+        justify-content: flex-start;
     }
 }
 @media (max-width:500px){
     .siteList{
-        min-width: 348px;
-        border:1px solid red;
         justify-content: space-between;
     }
 }
-.liMargin{
-    cursor: pointer;
-}
 @media (min-width:500px){
     .liMargin{
-        margin-right: 36px;
+        margin-right: 60px;
+        margin-bottom:16px;
     }
 }
 .site{
@@ -125,8 +125,8 @@ img{max-width: 100%;max-height: 100%;}
     align-items: center;
     flex-direction: column;
     border-radius: 5px;
-    margin-bottom:16px;
     position: relative;
+    cursor: pointer;
 }
 .site > .logo{
     width:61px;
@@ -154,7 +154,19 @@ img{max-width: 100%;max-height: 100%;}
     align-items: center;
     flex-direction: column;
     border-radius: 5px;
-    margin-bottom:16px;
+}
+.addSite:hover{
+    cursor: pointer;
+}
+@media (min-width:500px){
+    .addSite{
+        margin-bottom: 60px;
+    }
+}
+@media (max-width:500px){
+    .addSite{
+        margin-bottom: 16px;
+    }
 }
 .addSite > .icon-container{
     width:61px;
@@ -190,9 +202,14 @@ img{max-width: 100%;max-height: 100%;}
     opacity: 0;
     visibility: hidden;
     transition: 0.3s;
-    
 }
 .siteList .site:hover >.close{
     visibility: visible;
     opacity: 100%;
+}
+@media (min-width:500px){
+    .last{
+        margin-right: 60px;
+        margin-bottom:16px;
+    }
 }
